--- a/MTYD/MTYD.csproj
+++ b/MTYD/MTYD.csproj
@@ -18,11 +18,12 @@
 
   <ItemGroup>
     <!-- <PackageReference Include="Xamarin.Forms" Version="4.8.0.1269" /> -->
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.1141" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="Xamarin.Auth" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Forms.Maps" Version="4.8.0.1560" />
   </ItemGroup>
   
   <ItemGroup>
@@ -33,8 +34,17 @@
     <Folder Include="Model\SignUp\" />
     <Folder Include="Resources\" />
     <Folder Include="Resources\Font\" />
+    <Folder Include="Model\Login\LoginClasses\" />
+    <Folder Include="Model\Login\Constants\" />
+    <Folder Include="Model\Login\LoginClasses\Apple\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="DirectSignUp.xaml.cs" />
+    <Compile Remove="SocialSignUp.xaml.cs" />
+    <Compile Remove="DirectSignUpAV.xaml.cs" />
+    <Compile Remove="DirectSignUpA.xaml.cs" />
+  </ItemGroup>
   <ItemGroup>
     <Compile Update="ViewModel\OldLogin.xaml.cs">
       <DependentUpon>OldLogin.xaml</DependentUpon>
