--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 ## Get latest from https://github.com/github. (Need to fill in the rest)
 
 # Project-specific files 
-MTYD/MTYD/MTYD/Model/Login/Constants/
+# MTYD/MTYD/MTYD/Model/Login/Constants/    -- OLD Code should be deleted after checking
+MTYD/Model/Login/Constants/   
 
 
 # User-specific files
