--- a/MTYD.Android/MTYD.Android.csproj
+++ b/MTYD.Android/MTYD.Android.csproj
@@ -232,6 +232,10 @@
       <SubType></SubType>
       <Generator></Generator>
     </AndroidResource>
+    <AndroidResource Include="Resources\drawable\Calendar.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
