--- a/MTYD.iOS/MTYD.iOS.csproj
+++ b/MTYD.iOS/MTYD.iOS.csproj
@@ -205,6 +205,10 @@
     <BundleResource Include="Resources\landing2.jpg" />
     <BundleResource Include="Resources\lunch.png" />
     <BundleResource Include="Resources\Calendar.png" />
+    <BundleResource Include="Resources\dollar.png" />
+    <BundleResource Include="Resources\profile.png" />
+    <BundleResource Include="Resources\whiteLunch.png" />
+    <BundleResource Include="Resources\whiteCalendar.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="AppleSignIn\" />
