Finished notifications for iOS and Android, Added Address Validation, Added Google User Profile Pic

--- a/MTYD.iOS/Info.plist
+++ b/MTYD.iOS/Info.plist
@@ -45,7 +45,11 @@
 	</array>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>The user&apos;s location is used to determine where the meals will be delivered as well as the billing calculations.</string>
 	<key>CFBundleVersion</key>
-	<string>6</string>
+	<string>10</string>
 </dict>
 </plist>
