--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 
 # Project-specific files 
 # MTYD/MTYD/MTYD/Model/Login/Constants/    -- OLD Code should be deleted after checking
-MTYD/Model/Login/Constants/   
+MTYD/Model/Login/Constants/
+MTYD/Constants/   
 
 
 # User-specific files
