--- a/MTYD/MTYD.csproj
+++ b/MTYD/MTYD.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="PayPalCheckoutSdk" Version="1.0.3" />
     <PackageReference Include="PayPalHttp" Version="1.0.0" />
     <PackageReference Include="Stripe.net" Version="39.31.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
   </ItemGroup>
   
   <ItemGroup>
